IDEA 2022.x support (#1097)
* Gradle + IDEA configuration update

* Const fixes

* Removed item fixes

* Typing updates and fixes

* API changes and fixes

* verifyPlugin complete

* runIde idea.home.path fix

* Logger loader constraint violation fix

* Logger -> HaxeDebugLogger

* LineMarkerInfo deprecation fix: accessibleNameProvider

* HaxeResolveUtil null checks